Wed Apr 19 13:59:47 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (kdb5_edit_Init): If a default realm is specified
		(with -r), use krb5_set_default_realm so that created keys
		will have the correct realm.

Thu Mar 23 23:28:26 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdb5_edit.c (show_principal, parse_princ_args): Add
		"support_desmd5" flag.

Tue Mar 14 16:29:05 1995    <tytso@rsx-11.mit.edu>

	* ss_wrapper.c (main): Set the return code from ss_execute_line(),
		so that appropriate error checking is done.

Thu Mar  2 12:18:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:53:02 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:06:26 1995  John Gilmore  (gnu at toad.com)

	* dump.c, dumpv4.c, kdb5_edit.c, ss_wrapper.c, tcl_wrapper.c,
	util.c: Avoid <krb5/...> includes.

Thu Feb 23 19:52:35 1995  Mark Eichin  (eichin@cygnus.com)

	* kdb5_edit.c: add struct timeb and sys/timeb includes from
	getdate.y.
	(ftime): new function, in case we don't HAVE_FTIME.

Tue Feb 14 17:55:47 1995  Tom Yu  (tlyu@dragons-lair)

	* kdb5_edit.c: add modent
	* getdate.y: import get_date
	* kdbt_ed_ct.ct: add modent
	* configure.in:
	* Makefile.in: support for getdate.y

Wed Feb  8 20:08:36 1995  Tom Yu  (tlyu@dragons-lair)

	* kdb5_edit.c (show_principal): make sane and print all useful
	fields

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Dec 19 18:04:11 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in:
	* Makefile.in:
	* dumpv4.c (dump_v4db): Do the right thing if we are compiling
		without V4 support.  (The dump_v4db command is disabled.)

Wed Dec  7 00:07:46 1994    <tytso@rsx-11.mit.edu>
